# ocr_for_rag

./: .env.sample  docling_ocr.py  mistral_ocr.py  pyproject.toml
